k8s/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clembot-api
  labels:
    app: clembot-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clembot-api
  template:
    metadata:
      labels:
        app: clembot-api
    spec:
      containers:
      - name: api
        image: ghcr.io/jay-madden/clembot.api:healthcheck4
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
          limits:
            cpu: "1000m"
            memory: "1Gi"
        livenessProbe:
          httpGet:
            path: /livez
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
          timeoutSeconds: 5
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 15
          timeoutSeconds: 3
          failureThreshold: 3
      restartPolicy: Always
      imagePullSecrets:
      - name: ghcriocreds
